# CoFit20

./: README.md  Workout1  about.html  contact.html  index.html  schedule.html  selection.html  workout.html
DesignIdeas/: WebpageLayout.ai
docs/: index.html
flask-app/: README.md  main.py  pyproject.toml
flask-app/static/: example.json
flask-app/static/data/: workout1.json
flask-app/static/js/: main.js
flask-app/templates/: home.html  private.html  shared.html
static/css/: cover.css
static/data/: buildworkout.py  workout1.json  workout2.json  workout3.json
static/js/: index.js  main.js
website/: index.html
website/static/css/: cover.css
